force-app/main/default/objects/SecurityAlert__e/SecurityAlert__e.object-meta.xml
<CustomObject>
    <label>SecurityAlert</label>
</CustomObject>