force-app/main/default/objects/SecurityAlert__e/fields/ActionName__c.field-meta.xml
<CustomField>
    <fullName>ActionName__c</fullName>
    <description>VIEW / DOWNLOAD / EXPORT</description>
    <label>ActionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>