force-app/main/default/objects/SecurityAlert__e/fields/AlertMessage__c.field-meta.xml
<CustomField>
    <fullName>AlertMessage__c</fullName>
    <label>AlertMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>