force-app/main/default/objects/SecurityAlert__e/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <label>EventKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>