force-app/main/default/objects/SecurityAlert__e/fields/PolicyCode__c.field-meta.xml
<CustomField>
    <fullName>PolicyCode__c</fullName>
    <description>OFF_HOURS, ADMIN_ACCESS 등</description>
    <label>PolicyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>