force-app/main/default/objects/SecurityAlert__e/fields/ReportId__c.field-meta.xml
<CustomField>
    <fullName>ReportId__c</fullName>
    <label>ReportId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>