force-app/main/default/objects/SecurityAlert__e/fields/ResourceId__c.field-meta.xml
<CustomField>
    <fullName>ResourceId__c</fullName>
    <description>ReportId, ListViewId 등</description>
    <label>ResourceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>