force-app/main/default/objects/SecurityAlert__e/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <description>REPORT / LIST_VIEW / OBJECT / PAGE</description>
    <label>ResourceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>