force-app/main/default/objects/SecurityAlert__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>CRITICAL, HIGH, LOW</description>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>