force-app/main/default/objects/SecurityAlert__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>